# hkl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/hkl/: gff.hpp  gfflatter.hpp  region.h  region.hpp  regionseq.hpp  vcf.hpp
src/: gfflatter.cpp  pyhkl.cpp
test/: Region.xlsx  Strand.xlsx  export.py
test/include/: test.h  test_gff.hpp  test_hkl.hpp  test_region.hpp  test_regionseq.hpp
test/input/: annotation.gff  basic-mixed.tsv  basic-normal.tsv  basic-pure.tsv  constructors.tsv  extra.tsv  failure.tsv  formation.tsv  mixed-strand.tsv  mixed.tsv  normal-strand.tsv  normal.tsv  pure-strand.tsv  pure.tsv  sequences.fa  special.tsv  strand-mixed.tsv  strand-normal.tsv  strand-pure.tsv
test/src/: test.cpp  test_gff.cpp  test_hkl.cpp  test_region.cpp  test_regionseq.cpp
